--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
       "prebuild": {
         "commands": ["chmod 777 ./setup/setup_cloud_storage.sh", "./setup/setup_cloud_storage.sh"]
       },
-      "postcreate": ["chmod 777 ./setup/setup_cloud_scheduling.sh", "./setup/setup_cloud_scheduling.sh"]
-
+      "postcreate": {
+        "commands": ["chmod 777 ./setup/setup_cloud_scheduling.sh", "./setup/setup_cloud_scheduling.sh"]
+      }
     }
   }
