--- a/app.json
+++ b/app.json
@@ -28,7 +28,9 @@
         } 
     },
     "options": {
-      "allow-unauthenticated": true
+      "allow-unauthenticated": true,
+      "memory:": "1024Mi",
+      "cpu": 2
     },
     "build": {
         "skip": false
