--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     },
     "options": {
       "allow-unauthenticated": true,
-      "memory:": "1024Mi",
+      "memory": "1024Mi",
       "cpu": 2
     },
     "build": {
