--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     "options": {
       "allow-unauthenticated": true,
       "memory": "1024Mi",
-      "cpu": 2
+      "cpu": "2"
     },
     "build": {
         "skip": false
