--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ gaarf:
   account: 'MCC-ID'
   params:
     macro:
-      start_date: ":YYYYMMDD-180"
+      start_date: ":YYYYMMDD-120"
       end_date: ":YYYYMMDD-1"
 gaarf-bq:
   project: YOUR-BQ-PROJECT
@@ -20,3 +20,55 @@ gaarf-bq:
       legacy_dataset: urp_legacy
     template:
       cohort_days: 0,1,3,5,7,14,30
+dashboard:
+  url: "https://datastudio.google.com/reporting/create?
+  c.reportId=f6f81c6c-2da2-4bcc-98ff-58838c8cbba8
+  &r.reportName=MyNewReport
+  &ds.ds216.connector=bigQuery
+  &ds.ds216.datasourceName=BQ%20UAC%20Disapproval
+  &ds.ds216.projectId=one-click-stage
+  &ds.ds216.type=TABLE
+  &ds.ds216.datasetId=urp_target
+  &ds.ds216.tableId=approval_statuses
+  &ds.ds217.connector=bigQuery
+  &ds.ds217.datasourceName=BQ%20UAC%20Hygiene
+  &ds.ds217.projectId=one-click-stage
+  &ds.ds217.type=TABLE
+  &ds.ds217.datasetId=urp_target
+  &ds.ds217.tableId=creative_excellence
+  &ds.ds218.connector=bigQuery
+  &ds.ds218.datasourceName=BQ%20UAC%20Final%20Change%20History
+  &ds.ds218.projectId=one-click-stage
+  &ds.ds218.type=TABLE
+  &ds.ds218.datasetId=urp_target
+  &ds.ds218.tableId=change_history
+  &ds.ds221.connector=bigQuery
+  &ds.ds221.datasourceName=BQ%20UAC%20Cannibalization
+  &ds.ds221.projectId=one-click-stage
+  &ds.ds221.type=TABLE
+  &ds.ds221.datasetId=urp_target
+  &ds.ds221.tableId=cannibalization
+  &ds.ds277.connector=bigQuery
+  &ds.ds277.datasourceName=BQ%20UAC%20Geo%20Performance
+  &ds.ds277.projectId=one-click-stage
+  &ds.ds277.type=TABLE
+  &ds.ds277.datasetId=urp_target
+  &ds.ds277.tableId=geo_performance
+  &ds.ds220.connector=bigQuery
+  &ds.ds220.datasourceName=BQ%20UAC%20Performance%20Grouping%20Changes
+  &ds.ds220.projectId=one-click-stage
+  &ds.ds220.type=TABLE
+  &ds.ds220.datasetId=urp_target
+  &ds.ds220.tableId=performance_grouping
+  &ds.ds219.connector=bigQuery
+  &ds.ds219.datasourceName=BQ%20UAC%20Network%20Splits
+  &ds.ds219.projectId=one-click-stage
+  &ds.ds219.type=TABLE
+  &ds.ds219.datasetId=urp_target
+  &ds.ds219.tableId=ad_group_network_split
+  &ds.ds215.connector=bigQuery
+  &ds.ds215.datasourceName=BQ%20UAC%20Assets
+  &ds.ds215.projectId=one-click-stage
+  &ds.ds215.type=TABLE
+  &ds.ds215.datasetId=urp_target
+  &ds.ds215.tableId=asset_performance"
